--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
   },
   "homepage": "https://github.com/nhh1603/spotiC_backend#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mongodb": "^5.5.0",
     "mongoose": "^7.2.1",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   }
 }
